--- a/_website/plan.jade
+++ b/_website/plan.jade
@@ -8,7 +8,7 @@ h1#plan Plan of record
 
 blockquote
     p In preparing for battle, I have always found that plans are useless but planning is indispensable
-    div.quoter Dwight D. Eisenhower
+    div.quoter Dwight Donald. Eisenhower
 
 p This is a living document.  Events in the past will be marked with a <span class="done">checkbox and in blue</span>, while events in the future will be in the default dark gray type. 
 
